# kaggle-nlp-getting-started

./: .gitignore  LICENSE  Makefile  README.md  requirements.txt  setup.cfg  setup.py  sklearn_classify.py
src/: __init__.py
src/data/: commands.py  make_dataset.py
src/models/: data_transforms_10.py  dataset_and_dataloader_09.py  predict_model_sklearn_classify.py  predict_pytorch_transformers.py  train_model.py  train_model_sklearn_classify.py  train_nlp_bert_tweet.py  train_nlp_spec_logistic.py  train_pytorchWithBert.py  train_pytorch_logistic.py  train_pytorch_transformers.py
src/utils/: __init__.py  utils.py
submissions/: submission_sklearn_classify.csv
