[metadata]
name = nlp-getting-started
author = Christian Geng
author-email = christian.c.geng@gmail.com
url = https://gitlab.com/ccgeng/coursera-reinforcement-specialization
description = Files for nlp-starter
long-description = file: README.org, CHANGELOG.md
license = MIT
license-file = LICENSE
keywords = birdclef, audio
platforms= any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: audEERING
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
package_dir=
    =src
packages = find:
install_requires =
    audeer >=1.10.0
    torch
    torchaudio
    timm
    audiomentations
    torchlibrosa
    opencv-python
    transformers
    nltk
    click

setup_requires =
    setuptools_scm

[tool:pytest]
python_files = test_*.py
addopts =
    --durations=5
    --flake8
    --doctest-plus
    --cov=reinforcement_specialization
    --cov-fail-under=100
    --cov-report term-missing
    --ignore=tests/data/
    --cache-clear
    -p no:logging
xfail_strict = true


[options.entry_points]
console_scripts =
      nltk_stopwords=data.commands:nltk_stopwords


#     --testmon
#     --ignore=./tests/studies/covid-19/covid-19/pipelines/main.py

[options.packages.find]
where=src

[flake8]
max-line-length = 89
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401  # ignore unused imports
    quiet = 1

[yapf]
# or put into .style.yapf .style.yapf
based_on_style = pep8
spaces_before_comment = 4
split_before_logical_operator = true
column_limit = 89
align_closing_bracket_with_visual_indent = True
split_before_arithmetic_operator = True
split_before_bitwise_operator = True
blank_line_before_module_docstring = True
split_before_dot = True
# seems not to work on all versions: newline_after_paren = True

[isort]
force_single_line=True
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=89
# known_first_party=aud*
force_alphabetical_sort_within_sections=True
# isort docs at https://pycqa.github.io/isort/index.html

[tool:brunette]
line-length = 89
verbose = True
single-quotes = True
skip-string-normalization = False
# etc, etc...

# for lookup see https://mypy.readthedocs.io/en/stable/config_file.html
[mypy]
plugins = numpy.typing.mypy_plugin
